# trending_videos_app

./: .env  .gitignore  LICENSE  Makefile.am  README.md  analysis_options.yaml  buildozer.spec  configure.ac  gradle.properties  main.py  package-lock.json  package.json  pubspec.yaml  push_to_git.sh  requirements.txt  setup.py
.expo/types/: router.d.ts
.github/workflows/: android_build.yml  build.yml
android/: local.properties.template  settings.gradle
android/app/: build.gradle  proguard-rules.pro
api/: countries.ts  regions.ts  videos.ts
app/: _layout.tsx
app/(tabs)/: _layout.tsx  countries.tsx  index.tsx  regions.tsx  settings.tsx
app/country/: [code].tsx
app/video/: [id].tsx
components/: ContentAnalysisCard.tsx  CountryPicker.tsx  PlatformFilter.tsx  VideoCard.tsx
data/: countries.ts
lib/: main.dart
lib/constants/: app_constants.dart
lib/models/: trending_video.dart
lib/providers/: location_provider.dart  trending_provider.dart
lib/screens/: analytics_screen.dart  home_screen.dart  location_screen.dart  topics_screen.dart  video_detail_screen.dart
lib/services/: mock_data_service.dart
lib/widgets/: video_card.dart
services/: facebook_service.py  instagram_service.py  youtube_service.py
src/: main.py
src/models/: category.py  split_transaction.py  transaction.py
src/services/: insights_service.py  sms_service.py  speech_service.py  storage_service.py  transaction_service.py
test/: models_test.dart  widget_test.dart
types/: country.ts  region.ts  video.ts
ui/: main.kv
utils/: formatters.ts  platforms.ts
(+28 files in other folders)
