AC_PREREQ([2.69])
AC_INIT([TrendingVideos], [1.0], [support@example.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries
AC_CHECK_LIB([m], [cos])

# Checks for header files
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Configure files
AC_CONFIG_FILES([Makefile])

AC_OUTPUT